--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -23,7 +23,7 @@
 \usepackage{float}
 \numberwithin{figure}{section}
 \usepackage{tikz}
-\usetikzlibrary{shapes.geometric, positioning}
+\usetikzlibrary{shapes.geometric, positioning, patterns}
 \usepackage{tcolorbox} % 盒子效果
 \tcbuselibrary{breakable}
 \tcbuselibrary{most} % tcolorbox宏包的设置，详见宏包说明文档
@@ -51,6 +51,7 @@
 \newcommand{\dis}{\displaystyle}
 \newcommand{\pl}{|\!|}
 \newcommand{\dd}{\mathrm{d}}
+\newcommand{\DD}{\mathrm{D}}
 \newcommand{\diam}{\mathrm{diam}}
 % 该文件包含了自定义符号的设置，格式为\newcommand{\⟨符号名⟩}{⟨符号内容⟩}，如\newcommand{\R}{\mathbb{R}}表示实数集
 % ————————————————————————————————————自定义颜色————————————————————————————————————
