--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -53,6 +53,10 @@
 \newcommand{\dd}{\mathrm{d}}
 \newcommand{\DD}{\mathrm{D}}
 \newcommand{\diam}{\mathrm{diam}}
+\newcommand{\Aff}{\mathrm{Aff}}
+\newcommand{\Conv}{\mathrm{Conv}}
+\newcommand{\orb}{\mathrm{orb}}
+% \newcommand[1]{\anglebracket}{\left \langle {#1} \right \rangle}
 % 该文件包含了自定义符号的设置，格式为\newcommand{\⟨符号名⟩}{⟨符号内容⟩}，如\newcommand{\R}{\mathbb{R}}表示实数集
 % ————————————————————————————————————自定义颜色————————————————————————————————————
 \definecolor{mlv}{RGB}{40, 137, 124} % 墨绿
