--- a/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
+++ b/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
@@ -133,13 +133,13 @@ to derive that
 \begin{equation}
     p=\hbar k.
 \end{equation}
-It is wave-like. The Debye told to Schrödinger that: If it is a wave, then you can try to get a wave equation to describe it. 
+It is wave-like. Debye told to Schrödinger that: If it is a wave, then you can try to get a wave equation to describe it. 
 \newline
 If we consider a plane wave, the it take the form of 
 \begin{equation}
     \psi\sim \ee^{\frac{\ii}{\hbar}\left(px-Et\right)}.
 \end{equation}
-The exponent is similar to $S$- the action. So we can let $\psi=\ee^{\ii S/\hbar}$, and try to explore what we can get after plugging  it into the Hamilton equation.
+The exponent is similar to $S$: the action. So we can let $\psi=\ee^{\ii S/\hbar}$, and try to explore what we can get after plugging  it into the Hamilton equation.
 \begin{equation}
     \frac{\hbar^2}{2m}\left(\nabla \psi\right)^2+\left(E-V(r)\right)\psi^2=0.
 \end{equation}
@@ -701,7 +701,7 @@ We also have another more symmetrical form\footnote{In fact we do not need any c
     \begin{equation}
         \frac{\dd{O}}{\dd{\lambda}}=\ee^{\lambda A}\left(A+B\right)\ee^{\lambda B}.
     \end{equation}
-    We want to get a differential equation of $o(\lambda)$, so we have to take $(A+B)$ to the left of $\exp(\lambda A)$\footnote{Trick: If there is not we want, then create one, like $+1\, -1$, here we times $1$.}.
+    We want to get a differential equation of $O(\lambda)$, so we have to take $(A+B)$ to the left of $\exp(\lambda A)$\footnote{Trick: If there is not we want, then create one, like $+1\, -1$, here we times $1$.}.
     \begin{equation}
         \ee^{\lambda A}B\ee^{\lambda B}=\ee^{\lambda A}B\ee^{-\lambda A}\ee^{\lambda A}\ee^{\lambda B}.
     \end{equation}
@@ -774,7 +774,7 @@ The solution of \eqref{9.6} is Hermite polynomials\footnote{There's some propert
 \end{equation}
 And for a fixed $n$, the normalized wavefunction is
 \begin{equation}    
-    \psi_n(x)=\frac{1}{\sqrt{2^nn!\sqrt{\pi}}}\ee^{-\frac{x^2}{2}H_n(x)}.
+    \psi_n(z)=\frac{1}{\sqrt{2^nn!\sqrt{\pi}}}\ee^{-\frac{z^2}{2}}H_n(z).
 \end{equation}
 
 
@@ -1170,7 +1170,7 @@ Where, $L_\pm=L_x\pm \ii L_y$. \eqref{13.11} gives the fact that
 \begin{equation}
     \bra{\mathbf{x}}\mathbf{L}^2\ket{\alpha}=-r^2\hbar^2\nabla^2_{\theta,\phi}\braket{\mathbf{x}}{\alpha}.
 \end{equation}
-$\nabla_{\theta,\phi}$ is the laplacian in spherical coordinates, but without the term of $r$.
+$\nabla_{\theta,\phi}$ is the laplacian in spherical coordinates, but without the term\footnote{Term of $r$ is $\frac{1}{r^2}\frac{\pa}{\pa r}\left(r^2\frac{\pa}{\pa r}\cdot\right)$. This is equivalent to $\frac{1}{r}\frac{\pa^2}{\pa r^2}\left(r\ \cdot \ \right)$} of $r$.
 
 
 \subsection{Eigen Value}
@@ -1569,4 +1569,97 @@ Consider
     H=H_0+\lambda V,
 \end{equation}
 where $\lambda\ll1$, and we have known the eigenvalues and eigenkets of $H_0$. Then we want to know the eigenvalues and eigenkets of $H$.
+Let 
+\begin{equation}
+    \Delta_n=E_n-E_n^{(0)},
+\end{equation}
+then Schrödinger equation gives
+\begin{equation}
+    (E_n^{(0)}-H_0)\ket{n}=(\lambda V-\Delta_n)\ket{n}.
+\end{equation}
+For convenience, we define the projection operator and an operator like inverse of $(E_n^{(0)}-H_0)$:
+\begin{equation}
+    \phi_n := 1-\ket*{n^{(0)}}\bra*{n^{(0)}}=\sum_{m\neq n}\ket*{m^{(0)}}\bra*{m^{(0)}},
+\end{equation}
+\begin{equation}
+    \frac{\phi_n}{E_n^{(0)}-H_0} := \sum_{m\neq n}\frac{\ket*{m^{(0)}}\bra*{m^{(0)}}}{E_n^{(0)}-E_m^{(0)}}.
+\end{equation}
+We define $\phi_n$ aim at projecting out the component of $\ket*{n^{(0)}}$, eliminating the singularity of $(E_n^{(0)}-H_0)^{-1}$.
+
+Now, we have
+\begin{equation}
+    \ket{n}=\frac{\phi_n}{E_n^{(0)}-H_0}(\lambda V-\Delta_n)\ket{n}+\ket*{n^{(0)}}\braket*{n^{(0)}}{n}.
+\end{equation}
+
+Note that 
+\begin{equation}
+    \bra*{n^{(0)}}(E_n^{(0)}-H_0)\ket{n}=0.
+\end{equation}
+So,
+\begin{equation}
+    \Delta_n\braket*{n^{(0)}}{n}=\lambda \bra*{n^{(0)}}V\ket{n}.
+\end{equation}
+Since there's just a common multiplicative factor, we can normalize $\ket{n}$ later, and now we let $\braket*{n^{(0)}}{n}=1$. Then, we can set 
+\begin{equation}
+    \ket{n}=\ket*{n^{(0)}}+\lambda \ket*{n^{(1)}}+\lambda^2 \ket*{n^{(2)}}+\cdots,
+\end{equation}
+\begin{equation}
+    \Delta_n=\lambda E_n^{(1)}+\lambda^2 E_n^{(2)}+\cdots.
+\end{equation}
+equating the coefficient of various powers of $\lambda$, we obtain
+\begin{equation}
+    \Delta_{n}^{(k)}=\bra*{n^{(0)}}V\ket*{n^{(k-1)}},\ k=1,2,\ldots,
+\end{equation}
+Also,
+\begin{equation}
+    \ket*{n^{(k)}}=\frac{\phi_n}{E_n^{(0)}-H_0}\left[\left(V-\Delta_n^{(1)}\right)\ket*{n^{(k-1)}}-\sum_{j=2}^{k}\Delta_n^{(j)}\ket*{n^{(k-j)}}\right],\ k=1,2,\ldots.
+\end{equation}
+Let 
+\begin{equation}
+    V_{nk}:=\bra*{n^{(0)}}V\ket*{k^{(0)}},
+\end{equation}
+let us simplify the first and second order corrections:
+\begin{equation}
+    \Delta_n^{(1)}=V_{nn},
+\end{equation}
+So,
+\begin{equation}
+    \ket*{n^{(1)}}=\sum_{m\neq n}\frac{V_{mn}}{E_n^{(0)}-E_m^{(0)}}\ket*{m^{(0)}},
+\end{equation}
+\begin{equation}
+    \Delta_n^{(2)}=\sum_{m\neq n}\frac{|V_{mn}|^2}{E_n^{(0)}-E_m^{(0)}}.
+\end{equation}
+\begin{equation}
+    \ket*{n^{(2)}}=\sum_{m\neq n}\left[\sum_{l\neq n}\frac{V_{ml}V_{ln}}{(E_n^{(0)}-E_m^{(0)})(E_n^{(0)}-E_l^{(0)})}-\frac{V_{nn}V_{mn}}{(E_n^{(0)}-E_m^{(0)})^2}\right]\ket*{m^{(0)}}.
+\end{equation}
+Thus, up to second order in $\lambda$, we have
+\begin{equation}
+    E_n\approx E_n^{(0)}+\lambda V_{nn}+\lambda^2\sum_{m\neq n}\frac{|V_{mn}|^2}{E_n^{(0)}-E_m^{(0)}},
+\end{equation}
+\begin{equation}
+    \ket{n}\approx \ket*{n^{(0)}}+\lambda \sum_{m\neq n}\frac{V_{mn}}{E_n^{(0)}-E_m^{(0)}}\ket*{m^{(0)}}.
+\end{equation}
+Second order correction of energy at ground state always show minus sign.
+
+It is time to normalize $\ket{n}$. We define
+\begin{equation}
+    \ket{n}_N=Z_n^{1/2}\ket{n},\ Z_n^{1/2}=\braket*{n^{(0)}}{n}_N.
+\end{equation}
+Since $\bra*{n^{(0)}}\ket*{n^{(k)}}=0$, if $k\ge 1$,
+\begin{align}
+    Z_n^{-1}&=1+\lambda^2\bra*{n^{(1)}}\ket*{n^{(1)}}+\mathcal{O}(\lambda^3)\\
+    &=1+\lambda^2\sum_{m\neq n}\frac{|V_{mn}|^2}{(E_n^{(0)}-E_m^{(0)})^2}+\mathcal{O}(\lambda^3).
+\end{align}
+\begin{equation}\label{16.23}
+    Z_n=1-\lambda^2\sum_{m\neq n}\frac{|V_{mn}|^2}{(E_n^{(0)}-E_m^{(0)})^2}+\mathcal{O}(\lambda^3).
+\end{equation}
+The second term in \eqref{16.23} is to be understood as the probability for “leakage”
+to states other than $\ket*{n^{(0)}}$ . Notice that $Z_n$ is less than $1$, as expected on the basis
+of the probability interpretation for $Z$.
+
+In fact, we have (not only up to second order)
+\begin{equation}
+    Z_n=\frac{\pa E_n}{\pa E_n^{(0)}}.
+\end{equation}
+
 \end{document}
