--- a/fundamental algebra and analysis/fundamental algebra and analysis.tex
+++ b/fundamental algebra and analysis/fundamental algebra and analysis.tex
@@ -59,8 +59,9 @@
 %\include{Chapters/Chapter 5}
 %\include{Chapters/Chapter 6}
 %\include{Chapters/Chapter 7}
-\include{Chapters/Chapter 8}
+%\include{Chapters/Chapter 8}
 \include{Chapters/Chapter 9}
+
 
 
 
