--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -21,6 +21,7 @@
             ]
             {hyperref} % 实现引用超链接功能
 \usepackage{float}
+\usepackage{adjustbox}
 \numberwithin{figure}{section}
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric, positioning, patterns}
