--- a/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
+++ b/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
@@ -1825,4 +1825,6 @@ In particular,
     &c_n^{(1)}(t)=\left(\frac{-\ii}{\hbar}\right)\int_{t_0}^{t}\dd{t'}\ee^{\ii \omega_{ni}t'}V_{ni}(t')\\
     &c_n^{(2)}(t)=\left(\frac{-\ii}{\hbar}\right)^{2}\sum_{m}\int_{t_0}^{t}\dd{t_1}\int_{t_0}^{t_1}\dd{t_2}\ee^{\ii \omega_{nm} t_1}V_{nm}(t_1)\ee^{\ii \omega_{mi}t_2}V_{mi}(t_2)
 \end{eqnarray}
+
+In most of system in the real world, other atoms will disturb a specific coherent state, thus we can only consider the leaner term, not to worry time too long that can not fit the time condition.
 \end{document}
