--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -32,9 +32,9 @@
 \geometry{a4paper,centering,scale=0.8}
 
 % ————————————————————————————————————自定义符号————————————————————————————————————
-\newcommand{\zte}{\mathrm{e}} % 正体e
+\newcommand{\ee}{\mathrm{e}} % 正体e
 \newcommand{\ztd}{\mathrm{d}} % 正体d
-\newcommand{\zti}{\mathrm{i}} % 正体i
+\newcommand{\ii}{\mathrm{i}} % 正体i
 \newcommand{\ztj}{\mathrm{j}} % 正体j
 \newcommand{\ztk}{\mathrm{k}} % 正体k
 \newcommand{\CC}{\mathbb{C}} % 黑板粗体C
@@ -58,6 +58,7 @@
 \newcommand{\Conv}{\mathrm{Conv}}
 \newcommand{\orb}{\mathrm{orb}}
 \newcommand{\GL}{\mathrm{GL}}
+\newcommand{\pa}{\partial}
 % \newcommand[1]{\anglebracket}{\left \langle {#1} \right \rangle}
 % 该文件包含了自定义符号的设置，格式为\newcommand{\⟨符号名⟩}{⟨符号内容⟩}，如\newcommand{\R}{\mathbb{R}}表示实数集
 % ————————————————————————————————————自定义颜色————————————————————————————————————
